btns align fixed, main img catapult replaced

--- a/css/screen.css
+++ b/css/screen.css
@@ -591,8 +591,8 @@ picture { display: inline-block; vertical-align: middle; }
 
 .product-pic { position: absolute; top: 0; right: 350px; left: 0; bottom: 100px; text-align: center; font-size: 0; }
 .product-pic:before { content: ""; display: inline-block; vertical-align: middle; width: 0; height: 100%; }
-.product-pic picture { height: 100%; }
-.product-pic img { max-width: 100%; max-height: 100%; vertical-align: middle; }
+.product-pic picture { max-width: 100%; width: auto; height: 100%; }
+.product-pic img { max-width: 100%; height: 100%; width: auto; vertical-align: middle; }
 @media only screen and (max-width: 768px) { .product-pic { position: relative; top: 0; right: auto; bottom: auto; }
   .product-pic picture { max-width: 80%; margin-bottom: 20px; } }
 @media only screen and (max-width: 767px) { .product-pic { max-width: 100%; } }
@@ -1001,6 +1001,7 @@ picture { display: inline-block; vertical-align: middle; }
 .round-menu .round-menu__content span { display: inline-block; vertical-align: middle; font-size: 11px; }
 
 .more { margin-top: 50px; }
+.more.more_col .round-menu__item { display: block; }
 .more .more__topper { text-align: center; }
 .more .more__title { margin-bottom: 10px; }
 .more .round-menu_big { margin-top: 10px; }
