--- a/sass/_penguin.sass
+++ b/sass/_penguin.sass
@@ -366,6 +366,9 @@
 			font-size: 11px
 .more
 	margin-top: 50px
+	&.more_col
+		.round-menu__item
+			display: block
 	.more__topper
 		text-align: center
 	.more__title
