--- a/sass/_product.sass
+++ b/sass/_product.sass
@@ -449,10 +449,13 @@
     bottom: 100px
     +vertical
     picture
+        max-width: 100%
+        width: auto
         height: 100%
     img
         max-width: 100%
-        max-height: 100%
+        height: 100%
+        width: auto
         vertical-align: middle
     +r(768)
         position: relative
